Aggiunte e migliorie generali al codice
Creata classe di test per GestioneEmail, conclusa classe JPanelPasswordEmail, semplificata classe Registrazione (completata la parte legata alla registrazione dei dati del database, ancora da sistemare la parte grafica)